[tool.poetry]
name = "img"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.1"
Pillow = "^9.3.0"
pandas-profiling = "^3.4.0"
opencv-python = "^4.6.0"
torchvision = "^0.14.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.16.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
